fix: add z-index to .close-modal to make it works Make X icon in cart modal works and change height of .books-tobuy-container for mobile devices, also change font-size of 'Delete all' span to mobile devices

--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -1107,6 +1107,7 @@ footer {
     right: 25px;
     top: 25px;
     cursor: pointer;
+    z-index: 10;
 }
 
 .buy-modal-btn {
@@ -1164,6 +1165,12 @@ footer {
     }
     .buy-top h2 {
         font-size: 30px;
+    }
+    .books-tobuy-container {
+        height: 500px;
+    }
+    .delete-all {
+        font-size: 1rem;
     }
 }
 
